# ctf-writeups

./: README.md  statistics.sh
b01lers22/: README.md
b01lers22/pwn/veryfastvm/: README.md  cpu.py  pseudo-code.c  (+3 more)
insomnihack2022/PimpMyVariant/: README.md
insomnihack2022/herald/: README.md
insomnihack2024/CryptoNotes/: README.md
insomnihack2024/CryptoNotes/solution/MaliciousApp/: CMakeLists.txt  build.gradle  settings.gradle
insomnihack2024/CryptoNotes/solution/MaliciousApp/app/: build.gradle
insomnihack2024/CryptoNotes/solution/MaliciousApp/app/src/main/: AndroidManifest.xml
insomnihack2024/CryptoNotes/solution/MaliciousApp/app/src/main/cpp/: main.cpp  mylogger.h
insomnihack2024/CryptoNotes/solution/MaliciousApp/app/src/main/java/com/example/insomnipwn/: MainActivity.kt
insomnihack2024/CryptoNotes/solution/MaliciousApp/app/src/main/java/com/inso/ins24/utils/: CryptoConfig.java  JSONBuilder.java
insomnihack2024/CryptoNotes/solution/MaliciousApp/app/src/main/res/layout/: activity_main.xml
insomnihack2024/CryptoNotes/solution/MaliciousApp/app/src/main/res/values/: strings.xml
insomnihack2024/CryptoNotes/solution/MaliciousApp/gradle/wrapper/: gradle-wrapper.properties
m0lecon22/dumbforum/: README.md  jinja2-dumper.py
m0lecon22/fancynotes/: README.md  solution.py
pwnable.tw/3x17/: expoit.py
sekaictf24/hijacker/: README.md
uiuctf2020/: .gitignore  README.md
umass22/: README.md
umass22/baby-vm/: .gitignore  README.md  gdbpy-script.py  rwx-dump
umass22/umassdining/: Dockerfile  README.md  run.sh
umass22/venting/: README.md  solution.py
(+175 files in other folders)
